# Influencer-Analysis

./: .env  app.py  influencer_analysis.py  pyproject.toml  test.py  youtube.py  youtube2.py
crm-web2/: app.py  config.py  pyproject.toml  requirements.txt  twitter.py  youtube copy.py  youtube.py
crm-web2/static/css/: styles.css
crm-web2/templates/: index.html  index元.html  ranking.html  result.html  ほぼ原本.html
face_book/: Dockerfile  docker-compose.yml  main.py
templates/: index.html  omikuji.html
