[tool.poetry]
name = "influencer_analysis"
version = "0.1.0"
description = ""
authors = ["shigeokatakeshi <takeshi0713@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
tweepy = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
